objects/Lender_Portion__c.object
<CustomObject>
    <customHelpPage>Agency</customHelpPage>
    <fields>
        <fullName>Agreement_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agreement Party</label>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipLabel>Lender Portions</relationshipLabel>
        <relationshipName>Lender_Portions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committed_Responsible_Amount__c</fullName>
        <label>Committed Responsible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed_Responsible_Percentage__c</fullName>
        <label>Committed Responsible Percentage</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Drawdown__c</fullName>
        <label>Drawdown</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Lender Portions</relationshipLabel>
        <relationshipName>Lender_Portions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Facility_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Party</label>
        <referenceTo>Facility_Party__c</referenceTo>
        <relationshipLabel>Lender Portions</relationshipLabel>
        <relationshipName>Lender_Portions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Amount__c</fullName>
        <label>Responsible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Responsible_Percentage__c</fullName>
        <label>Responsible Percentage</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tranche_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tranche Party</label>
        <referenceTo>Tranche_Party__c</referenceTo>
        <relationshipLabel>Lender Portions</relationshipLabel>
        <relationshipName>Lender_Portions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lender Portion</label>
    <nameField>
        <displayFormat>LP-{0}</displayFormat>
        <label>Portion #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lender Portions</pluralLabel>
    <recordTypes>
        <fullName>Lender_Portion_Agreement</fullName>
        <active>true</active>
        <label>Lender Portion Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lender_Portion_Facility</fullName>
        <active>true</active>
        <label>Lender Portion Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lender_Portion_Tranche</fullName>
        <active>true</active>
        <label>Lender Portion Tranche</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Lender_Portion_changes</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED( Committed_Responsible_Amount__c) ||  ISCHANGED( Committed_Responsible_Percentage__c )) &amp;&amp;  ISNEW() == FALSE &amp;&amp; (!ISPICKVAL(Drawdown__r.Approval_Status__c, &apos;New&apos;) &amp;&amp; TEXT(Drawdown__r.Approval_Status__c) != NULL)</errorConditionFormula>
        <errorMessage>You are not allowed to change the Lender Portions after it has been submitted for Approval</errorMessage>
    </validationRules>
</CustomObject>